add sales and stock-movements
